--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -1,12 +1,9 @@
 {% load static %}
 <!doctype html>
-<!--suppress ALL -->
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'main/css/style.css' %}">
@@ -22,7 +19,7 @@
 <div class="container">
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
         <div class="col-md-3 mb-2 mb-md-0">
-            <img class="header__img" src="{% static 'main/img/Screenshot_1.png' %}" alt="Univer.By">
+            <img style="width: 300px;" class="header__img" src="{% static 'main/img/Screenshot_1.png' %}" alt="Univer.By">
             <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"></svg>
         </div>
 
@@ -42,7 +39,7 @@
                 <a class="btn btn-outline-success btn-lg px-4" href="login"><i class="fa-duotone fa-solid fa-right-to-bracket"></i> Вход</a>
             {% endif %}
         </div>
-                {% if messages %}
+        {% if messages %}
             {% for message in messages %}
                 <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
             {% endfor %}
