--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -15,7 +15,8 @@
         <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
              style="background-image: url({% static 'main/img/Screenshot_21.png' %});">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-            <h3 style="color: black;" class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold"> <span>Как спланировать учёбу на Уневер.By?</span></h3>
+            <h3 style="color: black;" class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold"> <span>
+                Как спланировать учёбу на Уневер.By?</span></h3>
           </div>
         </div>
       </div>
@@ -24,8 +25,8 @@
         <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
              style="background-image: url({% static 'main/img/Screenshot_22.png' %});">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-            <h3 style="color: black;" class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold"><span>Что такое Универ.By? Как им пользоваться?
-                Что это даст?</span></h3>
+            <h3 style="color: black;" class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold"><span>
+                Что такое Универ.By? Как им пользоваться? Что это даст?</span></h3>
           </div>
         </div>
       </div>
