--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block body %}
+    <!--suppress ALL -->
     <style>
         .bd-placeholder-img {
     font-size: 1.125rem;
@@ -36,7 +37,7 @@
     height: 100vh;
 }
 
-/*noinspection ALL*/
+
 .bi {
     vertical-align: -.125em;
     fill: currentColor;
@@ -135,7 +136,7 @@
 
         <p class="border-bottom"></p>
 
-        <div class="container col-xl-10 col-xxl-8 px-4 py-5">
+        <div class="container col-xxl-8 px-4 py-5">
             <div class="row align-items-center g-lg-5 py-5 rounded-3 border shadow-lg">
                 <div class="col-lg-7 text-center text-lg-start">
                     <h1 class="display-4 fw-bold lh-1 text-body-emphasis mb-3">Удобное хранение конспектов и презентаций</h1>
@@ -184,7 +185,7 @@
             </div>
         </div>
 
-        <div class="b-example-divider mb-0"></div>
+        <p class="border-bottom"></p>
     </main>
 {% endblock %}
 
