--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -59,33 +59,33 @@
       <div class="col-6 col-md-2 mb-3">
         <h5>Главная</h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Главная</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">О нас</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Универы</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Новостной блог</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Все функции сайта</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary link-success">Главная</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary link-success">О нас</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary link-success">Универы</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary link-success">Новостной блог</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary link-success">Все функции сайта</a></li>
         </ul>
       </div>
 
       <div class="col-6 col-md-2 mb-3">
         <h5>Премиум</h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">UniverPremium</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Тарифы</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Бот для оплаты</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Акции</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Активация ключа</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary link-success">UniverPremium</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary link-success">Тарифы</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary link-success">Бот для оплаты</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary link-success">Акции</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary link-success">Активация ключа</a></li>
         </ul>
       </div>
 
       <div class="col-6 col-md-2 mb-3">
         <h5>Аккаунт</h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Вход</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Регистрация</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Выход</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Статус</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Профиль</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary link-success">Вход</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary link-success">Регистрация</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary link-success">Выход</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary link-success">Статус</a></li>
+          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary link-success">Профиль</a></li>
         </ul>
       </div>
 
@@ -96,7 +96,7 @@
           <div class="d-flex flex-column flex-sm-row w-100 gap-2">
             <label for="newsletter1" class="visually-hidden">Email</label>
             <input id="newsletter1" type="text" class="form-control" placeholder="email@example.com">
-            <input class="btn btn-outline-secondary" type="submit" value="Подписатся">
+            <input class="btn btn-outline-success" type="submit" value="Подписатся">
           </div>
          <p></p>
         </form>
