--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -120,7 +120,7 @@
             </div>
         </div>
         <p class="border-bottom"></p>
-        <div class="container col-xxl-8 px-4 py-5">
+        <div class="px-4 py-5 my-5 text-center rounded-3 border shadow-lg">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5 rounded-3 border shadow-lg">
                 <div class="col-10 col-sm-8 col-lg-6">
                     <img src="{% static 'main/img/Screenshot_10.png' %}" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
@@ -136,7 +136,7 @@
 
         <p class="border-bottom"></p>
 
-        <div class="container col-xxl-8 px-4 py-5">
+        <div class="px-4 py-5 my-5 text-center rounded-3 border shadow-lg">
             <div class="row align-items-center g-lg-5 py-5 rounded-3 border shadow-lg">
                 <div class="col-lg-7 text-center text-lg-start">
                     <h1 class="display-4 fw-bold lh-1 text-body-emphasis mb-3">Удобное хранение конспектов и презентаций</h1>
