Изменения в шапках  и frontend

--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -16,7 +16,7 @@
              style="background-image: url({% static 'main/img/Screenshot_21.png' %});">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
             <h3 style="color: black;" class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold"> <span>
-                Как спланировать учёбу на Уневер.By?</span></h3>
+                Как спланировать учёбу на UNIVER.BY?</span></h3>
           </div>
         </div>
       </div>
@@ -26,7 +26,7 @@
              style="background-image: url({% static 'main/img/Screenshot_22.png' %});">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
             <h3 style="color: black;" class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold"><span>
-                Что такое Универ.By? Как им пользоваться? Что это даст?</span></h3>
+                Что такое UNIVER.BY? Как им пользоваться? Что это даст?</span></h3>
           </div>
         </div>
       </div>
@@ -34,9 +34,9 @@
       <div class="col">
         <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
              style="background-image: url({% static 'main/img/Screenshot_23.png' %});">
-          <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold"><span>Какие будут новинки? Как это повлият на работу
-                и как всё будет продвигаться?</span></h3>
+         <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+            <h3 style="color: black;" class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold"><span>
+                Какие будут новинки? Как это повлият на работу и как всё будет продвигаться?</span></h3>
           </div>
         </div>
       </div>
