--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -172,7 +172,7 @@
 
         <div class="px-4 py-5 text-center rounded-3 border shadow-lg">
             <div class="py-5">
-                <h1 class="display-5 fw-bold text-white">Дополнительная информация</h1>
+                <h1 class="col-lg-6 mx-auto">Дополнительная информация</h1>
                 <div class="col-lg-6 mx-auto">
                     <p class="fs-5 mb-4">После регистрации вы сможете создавать свои материалы, загружать их на платформу и делиться ими с другими пользователями.
 
