--- a/templates/premium/premium.html
+++ b/templates/premium/premium.html
@@ -130,8 +130,8 @@ Univer premium
         <h2 class="fw-bold text-body-emphasis">Univer.By Premium</h2>
         <p class="text-body-secondary">Эти преимущества делают премиум-аккаунт Univer.By привлекательным выбором для
             студентов, преподавателей и всех, кто интересуется образованием.</p>
-        <a href="{% url 'pricing' %}" class="btn btn-primary btn-lg">Тарифы</a>
-        <a href="{% url 'premium_buy' %}" class="btn btn-outline-secondary">К оплате</a>
+        <a href="{% url 'pricing' %}" class="btn btn-warning btn-lg">Тарифы</a>
+        <a href="{% url 'premium_buy' %}" class="btn btn-outline-success">К оплате</a>
       </div>
 
       <div class="col">
