--- a/templates/main/register.html
+++ b/templates/main/register.html
@@ -2,11 +2,12 @@
 {% block title %} Регистрация {% endblock %}
 {% block body %}
     {% load crispy_forms_tags %}
-        <h1>Регистрация</h1>
+        <center><h1>Регистрация</h1></center>
         <form method="POST">
             {% csrf_token %}
             {{ register_form|crispy }}
-            <button class="btn btn-primary" type="submit">Регистрация</button>
+            <p class="text-center">Если у вас уже есть аккаунт, <a href="/login">войдите</a> в систему</p>
+            <center><button class="btn btn-success" type="submit">Регистрация</button></center>
         </form>
-        <p class="text-center">Если у вас уже есть аккаунт, <a href="/login">войдите</a> в систему</p>
+
 {% endblock %}
