--- a/templates/main/register.html
+++ b/templates/main/register.html
@@ -2,12 +2,13 @@
 {% block title %} Регистрация {% endblock %}
 {% block body %}
     {% load crispy_forms_tags %}
-        <center><h1>Регистрация</h1></center>
+        <div class="center">
+        <h1 >Регистрация</h1>
         <form method="POST">
             {% csrf_token %}
             {{ register_form|crispy }}
-            <p class="text-center">Если у вас уже есть аккаунт, <a href="/login">войдите</a> в систему</p>
-            <center><button class="btn btn-success" type="submit">Регистрация</button></center>
+            <p class="">Если у вас уже есть аккаунт, <a href="/login">войдите</a> в систему</p>
+            <button class="btn btn-success" type="submit">Регистрация</button>
         </form>
-
+        </div>
 {% endblock %}
