Исправил на на а не на не

--- a/templates/premium/premium_buy.html
+++ b/templates/premium/premium_buy.html
@@ -12,7 +12,7 @@
     </div>
     <p> </p>
     <div class="container">
-        <h4>После завершения оплаты перейдети не страницу активации, нажав кнопку ниже.</h4>
+        <h4>После завершения оплаты перейдети на страницу активации, нажав кнопку ниже.</h4>
         <a target="_blank" class="btn btn-warning btn-lg" href="{% url 'premium_activate' %}">Активация</a>
     </div>
 {% endblock %}
