--- a/templates/premium/pricing.html
+++ b/templates/premium/pricing.html
@@ -17,6 +17,8 @@
                         <span class="name">Базовый</span>
                         <span class="price">0 Br<span>/вечно</span></span>
                     </div>
+                    <a target="blank" href="https://t.me/univerpayrobot" class="btn btn-outline-secondary disabled">Активен по умолчанию</a>
+                    <p></p>
                     <div class="info">
                         <i class="fa-solid fa-check" style="color: #019a01;"></i> Ограниченный доступ к базе<hr>
                         <i class="fa-solid fa-check" style="color: #019a01;"></i> Ограниченный доступ к магазину и мероприятиям<hr>
@@ -27,10 +29,8 @@
                         <i class="fa-solid fa-check" style="color: #019a01;"></i> Публикация тестов<hr>
                         <span class="opacity50"><i class="fa-solid fa-xmark" style="color: #db0000;"></i> Выделяющиеся сообщения</span><hr>
                         <span class="opacity50"><i class="fa-solid fa-xmark" style="color: #db0000;"></i> Создание мерча </span><hr>
-                        <span class="opacity50"><i class="fa-solid fa-xmark" style="color: #db0000;"></i> Приоритетная техподдержка</span><hr>
+                        <span class="opacity50"><i class="fa-solid fa-xmark" style="color: #db0000;"></i> Приоритетная техподдержка</span>
                     </div>
-                    <a target="_blank" href="https://t.me/univerpayrobot" class="btn btn-outline-primary">Купить сейчас</a>
-                    <p></p>
                 </div>
 
                 <div class="label">
@@ -38,6 +38,8 @@
                         <span class="name">Старт</span>
                         <span class="price">45 Br<span>/месяц</span></span>
                     </div>
+                    <a target="blank" href="https://t.me/univerpayrobot" class="btn btn-outline-primary">Купить сейчас</a>
+                    <p></p>
                     <div class="info">
                         <i class="fa-solid fa-check" style="color: #019a01;"></i> Больше доступа к базе<hr>
                         <i class="fa-solid fa-check" style="color: #019a01;"></i> Ограниченный доступ к мероприятиям<hr>
@@ -48,10 +50,8 @@
                         <i class="fa-solid fa-check" style="color: #019a01;"></i> Публикация тестов<hr>
                         <i class="fa-solid fa-check" style="color: #019a01;"></i> Выделяющиеся сообщения<hr>
                         <span class="opacity50"><i class="fa-solid fa-xmark" style="color: #db0000;"></i> Создание мерча </span><hr>
-                        <span class="opacity50"><i class="fa-solid fa-xmark" style="color: #db0000;"></i> Приоритетная техподдержка</span><hr>
+                        <span class="opacity50"><i class="fa-solid fa-xmark" style="color: #db0000;"></i> Приоритетная техподдержка</span>
                     </div>
-                    <a target="_blank" href="https://t.me/univerpayrobot" class="btn btn-outline-primary">Купить сейчас</a>
-                    <p></p>
                 </div>
 
                 <div class="label megaprem prem">
@@ -59,6 +59,8 @@
                         <span class="name">Бизнес</span>
                         <span class="price">100 Br<span>/месяц</span></span>
                     </div>
+                    <a target="blank" href="https://t.me/univerpayrobot" class="btn btn-outline-danger">Купить сейчас</a>
+                    <p></p>
                     <div class="info">
                         <i class="fa-solid fa-check" style="color: #019a01;"></i> Полный доступ к базе<hr>
                         <i class="fa-solid fa-check" style="color: #019a01;"></i> Доступ к мероприятиям<hr>
@@ -69,10 +71,8 @@
                         <i class="fa-solid fa-check" style="color: #019a01;"></i> Публикация тестов<hr>
                         <i class="fa-solid fa-check" style="color: #019a01;"></i> Выделяющиеся сообщения<hr>
                         <i class="fa-solid fa-check" style="color: #019a01;"></i> Создание мерча<hr>
-                        <span class="opacity50"><i class="fa-solid fa-xmark" style="color: #db0000;"></i> Приоритетная техподдержка</span><hr>
+                        <span class="opacity50"><i class="fa-solid fa-xmark" style="color: #db0000;"></i> Приоритетная техподдержка</span>
                     </div>
-                    <a target="_blank" href="https://t.me/univerpayrobot" class="btn btn-primary">Купить сейчас</a>
-                    <p></p>
                 </div>
 
                 <div class="label megaprem">
@@ -80,6 +80,8 @@
                         <span class="name">Премиум</span>
                         <span class="price">150 Br<span>/месяц</span></span>
                     </div>
+                    <a target="blank" href="https://t.me/univerpayrobot" class="btn btn-outline-danger">Купить сейчас</a>
+                    <p></p>
                     <div class="info">
                         <i class="fa-solid fa-check" style="color: #019a01;"></i> Полный доступ к базе<hr>
                         <i class="fa-solid fa-check" style="color: #019a01;"></i> Доступ ко всем конференциям и мероприятиям<hr>
@@ -90,17 +92,18 @@
                         <i class="fa-solid fa-check" style="color: #019a01;"></i> Публикация тестов<hr>
                         <i class="fa-solid fa-check" style="color: #019a01;"></i> Выделяющиеся сообщения<hr>
                         <i class="fa-solid fa-check" style="color: #019a01;"></i> Создание мерча<hr>
-                        <i class="fa-solid fa-check" style="color: #019a01;"></i> Приоритетная техподдержка<hr>
+                        <i class="fa-solid fa-check" style="color: #019a01;"></i> Приоритетная техподдержка
                     </div>
-                    <a target="_blank" href="https://t.me/univerpayrobot" class="btn btn-primary">Купить сейчас</a>
-                    <p></p>
                 </div>
             </div>
 
             <div class="more_tariffs mt30">
                 <b>Нужен более расширенный тариф? <a target="_blank" href="https://t.me/univerpayrobot">Напишите нам</a></b>
             </div>
-
+            <p></p>
+            <div class="container">
+            <a href="{% url 'premium_activate' %}" class="btn btn-outline-warning btn-lg" style="padding-right: 30rem!important;padding-left: 30rem!important;">Активация</a>
+            </div>
         </div>
     </div>
 {% endblock %}
