--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'main/css/style.css' %}">
+    <link rel="shortcut icon" href="{% static 'main/img/Screenshot_9.png' %}" />
 
     <link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'fontawesomefree/css/brands.css' %}" rel="stylesheet" type="text/css">
@@ -18,16 +19,16 @@
     <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
-<div class="container">
+<div>
+
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4
     border-bottom">
-        <div class="col-md-3 mb-2 mb-md-0">
-            <img style="width: 300px;" class="header__img" src="{% static 'main/img/Screenshot_1.png' %}"
+        <div class="">
+            <img style="width: 200px;" class="header__img" src="{% static 'main/img/Screenshot_1.png' %}"
                  alt="Univer.By">
-            <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"></svg>
         </div>
 
-        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+        <ul class="nav">
             <li><a href="{% url 'home' %}" class="nav-link px-2 link-success">Главная</a></li>
             <li><a href="{% url 'premium' %}" class="nav-link px-2 link-success">UniverPremium</a></li>
             <li><a href="" class="nav-link px-2 link-success">Институты</a></li>
@@ -38,7 +39,13 @@
             fa-circle-half-stroke"></i></button>
         <div class="">
             {% if user.is_authenticated %}
-                <a class="btn btn-outline-warning btn-lg px-4" href="{% url 'logout' %}?red={{ request.path }}">
+                Вошли как: <i class="fa-duotone fa-solid fa-user"></i>{{ user.username }} 
+                {% if user.is_staff %}
+                    <a class="btn btn-outline-info btn-lg " href="/univeradminby/">
+                    <i class="fa-duotone fa-solid fa-user"></i> Админка</a>
+                {% endif %}
+
+             <a class="btn btn-outline-warning btn-lg px-4" href="{% url 'logout' %}?red={{ request.path }}">
                     <i class="fa-duotone fa-solid fa-right-to-bracket"></i> Выход</a>
             {% else %}
                 <a class="btn btn-success btn-lg px-4 gap-3" href="{% url 'register' %}?red={{ request.path }}">
@@ -124,12 +131,21 @@
 </div>
 <!--suppress ChainedFunctionCallJS, AnonymousFunctionJS, XHTMLIncompatabilitiesJS, ConstantOnRightSideOfComparisonJS -->
 <script>
+    const currentTheme = sessionStorage.getItem('CurrentTheme');
+     if (currentTheme === 'dark-theme') {
+        document.body.className = 'dark-theme';
+    } else {
+        document.body.className = 'light-theme';
+    }
     document.getElementById('themeToggle').addEventListener('click', function() {
-    const currentTheme = document.body.className;
+    const currentTheme = sessionStorage.getItem('CurrentTheme');
+    console.log(currentTheme);
     if (currentTheme === 'dark-theme') {
         document.body.className = 'light-theme';
+        sessionStorage.setItem('CurrentTheme', 'light-theme')
     } else {
         document.body.className = 'dark-theme';
+        sessionStorage.setItem('CurrentTheme', 'dark-theme')
     }
 });
         document.getElementById('themeToggle2').addEventListener('click', function() {
