--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -1,13 +1,26 @@
 {% extends "main/base.html" %}
-{% block title %} Вход в систему {% endblock %}
+{% load static %}
+
+{% block title %}
+    Вход в систему
+{% endblock %}
 {% block body %}
-    {% load crispy_forms_tags %}
-        <h1>Вход в систему</h1>
+    <link rel="stylesheet" href="{% static 'main/css/login.css' %}">
+
+    <main class="form-signin w-100 m-auto">
         <form method="POST">
             {% csrf_token %}
-            {{ login_form|crispy }}
-            <button class="btn btn-primary" type="submit">Войти</button>
+            <h1 class="h3 mb-3 fw-normal">С возвращением!</h1>
+            <div class="form-floating">
+                <input type="text" name="username" class="form-control" id="floatingInput" placeholder="nickname">
+                <label for="floatingInput">Имя</label>
+            </div>
+            <div class="form-floating">
+                <input type="password" name="password" class="form-control" id="floatingPassword" placeholder="qwer1234">
+                <label for="floatingPassword">Пароль</label>
+            </div>
+            <button class="btn btn-success w-100 py-2" type="submit">Вход</button>
         </form>
-        <p class="text-center">У вас нет аккаунта? <a href="/register">Создайте сейчас</a>.</p>
+    </main>
 
 {% endblock %}
