--- a/templates/main/register.html
+++ b/templates/main/register.html
@@ -1,14 +1,35 @@
 {% extends "main/base.html" %}
-{% block title %} Регистрация {% endblock %}
+{% load static %}
+
+{% block title %}
+    Регистрация
+{% endblock %}
+
 {% block body %}
-    {% load crispy_forms_tags %}
-        <div class="center">
-        <h1 >Регистрация</h1>
+    <link rel="stylesheet" href="{% static 'main/css/login.css' %}">
+    <main class="form-signin w-100 m-auto">
         <form method="POST">
             {% csrf_token %}
-            {{ register_form|crispy }}
-            <p class="">Если у вас уже есть аккаунт, <a href="/login">войдите</a> в систему</p>
-            <button class="btn btn-success" type="submit">Регистрация</button>
+            <h1 class="h3 mb-3 fw-normal">Регистрация!</h1>
+            <div class="form-floating">
+                <input type="text" name="username" class="form-control" id="floatingInput" placeholder="nickname">
+                <label for="floatingInput">Имя пользователя</label>
+            </div>
+            <div class="form-floating">
+                <!--suppress LongLine -->
+                <input type="email" name="email" class="form-control" id="floatingInput" placeholder="example@gmail.com">
+                <label for="floatingInput">Email</label>
+            </div>
+            <div class="form-floating">
+                <!--suppress LongLine -->
+                <input type="password" name="password1" class="form-control" id="floatingPassword" placeholder="qwer1234">
+                <label for="floatingPassword">Пароль</label>
+            </div>
+            <div class="form-floating">
+                <input type="password" name="password2" class="form-control" id="floatingPassword2" placeholder="qwer1234">
+                <label for="floatingPassword2">Подтверждение пароля</label>
+            </div>
+            <button class="btn btn-success w-100 py-2" type="submit">Зарегистрироватся</button>
         </form>
-        </div>
+    </main>
 {% endblock %}
