--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -123,7 +123,7 @@
         <li class="ms-3"><a style="color: black;" class="link-body-emphasis" target="blank" href="#">
             <i class="fa-brands fa-instagram fa-2xl"></i></a></li>
         <li class="ms-3"><a style="color: black;" class="link-body-emphasis" target="blank" href="#">
-        <i class="fa-brands fa-facebook fa-2xl"></i></a></li>
+        <i class="fa-brands fa-youtube fa-2xl"></i></a></li>
       </ul>
     </div>
   </footer>
