--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -122,7 +122,7 @@
             <i class="fa-brands fa-telegram fa-2xl"></i></a></li>
         <li class="ms-3"><a style="color: black;" class="link-body-emphasis" target="blank" href="#">
             <i class="fa-brands fa-instagram fa-2xl"></i></a></li>
-        <li class="ms-3"><a style="color: black;" class="link-body-emphasis" target="blank" href="#">
+        <li class="ms-3"><a style="color: black;" class="link-body-emphasis" target="blank" href="https://www.youtube.com/@univerby">
         <i class="fa-brands fa-youtube fa-2xl"></i></a></li>
       </ul>
     </div>
