--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -120,7 +120,8 @@
       <ul class="list-unstyled d-flex">
         <li class="ms-3"><a style="color: black;" class="link-body-emphasis" target="blank" href="https://t.me/univer_by">
             <i class="fa-brands fa-telegram fa-2xl"></i></a></li>
-        <li class="ms-3"><a style="color: black;" class="link-body-emphasis" target="blank" href="#">
+        <li class="ms-3"><a style="color: black;" class="link-body-emphasis" target="blank" href="https://www.instagram.com/univerby/
+">
             <i class="fa-brands fa-instagram fa-2xl"></i></a></li>
         <li class="ms-3"><a style="color: black;" class="link-body-emphasis" target="blank" href="https://www.youtube.com/@univerby">
         <i class="fa-brands fa-youtube fa-2xl"></i></a></li>
