--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -125,6 +125,8 @@
             <i class="fa-brands fa-instagram fa-2xl"></i></a></li>
         <li class="ms-3"><a style="color: black;" class="link-body-emphasis" target="blank" href="https://www.youtube.com/@univerby">
         <i class="fa-brands fa-youtube fa-2xl"></i></a></li>
+        <li class="ms-3"><a style="color: black;" class="link-body-emphasis" target="blank" href="https://www.tiktok.com/@univerby">
+            <i class="fa-brands fa-tiktok fa-2xl"></i></a></li>
       </ul>
     </div>
   </footer>
